# assetslice

./: .gitignore  README.md  package.json  tailwind.config.js
app/: globals.css  layout.tsx  page.tsx
app/api/assets/: route.ts
app/api/claims/: route.ts
app/api/dividends/: route.ts
app/api/history/: route.ts
app/api/orderbook/: route.ts
app/api/portfolio/: route.ts
app/api/rates/: route.ts
app/api/transactions/: route.ts
app/api/tx/buy/: route.ts
app/assets/: page.tsx
app/assets/[id]/: page.tsx
app/buy-assets/: page.tsx
app/history/: page.tsx
app/legal/: page.tsx
app/onboarding/: page.tsx
app/portfolio/: page.tsx
app/trade/: page.tsx
backend/: Anchor.toml  package.json  tsconfig.json
backend/indexer/: .env.example  package.json
backend/indexer/prisma/: schema.prisma
backend/indexer/src/: database.ts  eventListener.ts  index.ts  server.ts
backend/programs/rwa_backend/: Cargo.toml
backend/programs/rwa_market/: Cargo.toml
backend/programs/rwa_market/src/: lib.rs
backend/programs/rwa_registry/: Cargo.toml
backend/programs/rwa_registry/src/: lib.rs
components/layout/: Header.tsx  Layout.tsx  MobileNavigation.tsx
components/providers/: ErrorProvider.tsx  ThemeProvider.tsx  WalletProvider.tsx
components/ui/: AssetCard.tsx  Badge.tsx  Button.tsx  Card.tsx  ErrorBoundary.tsx  FormField.tsx  Input.tsx  LoadingSpinner.tsx  Modal.tsx  Select.tsx  Textarea.tsx  WalletButton.tsx
lib/: api.ts  error-utils.ts  mock-data.ts  solana-validation.ts  types.ts  validation.ts
prisma/: schema.prisma
rwa_backend/: Anchor.toml
(+9 files in other folders)
