[package]
name = "rwa_market"
version = "0.1.0"
description = "RWA Market Program for Trading and Dividend Distribution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rwa_market"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
anchor-debug = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
rwa_registry = { path = "../rwa_registry", features = ["cpi"] }