[package]
name = "rwa_registry"
version = "0.1.0"
description = "RWA Registry Program for Asset Registration and Management"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "rwa_registry"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
anchor-debug = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"